--- a/server/views/partials/displayAllOffenceCards.njk
+++ b/server/views/partials/displayAllOffenceCards.njk
@@ -2,6 +2,7 @@
 {% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
 
 {% for offence in offences %}
+    {% set offenceId = 'offences.' + offence.index %}
     {{ offenceCard({
         offenceCode: offence.offenceCode,
         offenceName: offenceMap[offence.offenceCode],
@@ -31,7 +32,9 @@
                     visuallyHiddenText: "delete offence"
                 }
             ]
-        }
+        },
+        id: offenceId,
+        errorMessage: errors | findErrorsBeginningWith(offenceId)
     }) }}
 {% else %}
     {{ govukInsetText({
