--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -110,7 +110,7 @@
                     </li>
                     {% if appearance.canDelete %}
                       <li class="offence-card-action-link">
-                        <a href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/{{ appearance.appearanceUuid }}/delete" class="govuk-link--no-visited-state">Delete</a>
+                        <a href="/person/{{ nomsId }}/edit-court-case/{{ courtCaseDetails.courtCaseUuid }}/{{ appearance.appearanceUuid }}/confirm-delete" class="govuk-link--no-visited-state">Delete</a>
                       </li>
                     {% endif %}
                 {% endif %}
