updating the response

--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -35,6 +35,7 @@
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
                         actions: {
                             items: [
                                 {
@@ -73,6 +74,7 @@
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
                         actions: {
                             items: [
                                 {
