--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -170,6 +170,16 @@
             </span>
             <h1 class="govuk-heading-l">Edit appearance</h1>
 
+                        {% if mergedFromText %}
+                            {{ govukInsetText({
+                                text: mergedFromText,
+                                classes: "govuk-!-margin-bottom-3",
+                                attributes: {
+                                    "data-qa": "mergedFromText"
+                                }
+                            }) }}
+                        {% endif %}
+
             {{ govukSummaryList({
                 rows: appearanceSummaryRows,
                 attributes: {
@@ -249,6 +259,7 @@
             consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
             sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
             fineAmount: offence.sentence.fineAmount,
+            mergedFromCase: offence.mergedFromCase,
             consecutiveConcurrentLink: {
                 href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.index + "/select-consecutive-concurrent",
                 text: 'Select consecutive or current'
