--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -8,6 +8,16 @@
 {% set hideOffences = true %}
 {% block pageContent %}
             <h1 class="govuk-heading-l">Review offences</h1>
+
+            {% if mergedFromText %}
+                {{ govukInsetText({
+                    text: mergedFromText,
+                    classes: "govuk-!-margin-bottom-3",
+                    attributes: {
+                        "data-qa": "mergedFromText"
+                    }
+                }) }}
+            {% endif %}
             
             {{ govukButton({
                 text: "Add an offence" ,
@@ -35,6 +45,8 @@
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
+                        courtDetails: courtMap,
                         actions: {
                             items: [
                                 {
@@ -73,6 +85,8 @@
                         periodLengths: offence.sentence.periodLengths,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
+                        courtDetails: courtMap,
                         actions: {
                             items: [
                                 {
