--- a/server/views/pages/courtAppearance/appearance-details.njk
+++ b/server/views/pages/courtAppearance/appearance-details.njk
@@ -167,6 +167,16 @@
             </span>
             <h1 class="govuk-heading-l">Edit appearance</h1>
 
+            {% if mergedFromText %}
+                {{ govukInsetText({
+                    text: mergedFromText,
+                    classes: "govuk-!-margin-bottom-3",
+                    attributes: {
+                        "data-qa": "mergedFromText"
+                    }
+                }) }}
+            {% endif %}
+
             {{ govukSummaryList({
                 rows: appearanceSummaryRows,
                 attributes: {
@@ -239,6 +249,8 @@
                             consecutiveTo: consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                             sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] | sentenceTypeValueOrLegacy(offence.sentence.legacyData),
                             fineAmount: offence.sentence.fineAmount,
+                            mergedFromCase: offence.mergedFromCase,
+                            courtDetails: courtMap,
                             consecutiveConcurrentLink: {
                                 href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + loop.index0 + "/select-consecutive-concurrent",
                                 text: 'Select consecutive or current'
