--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -8,6 +8,15 @@
 {% set hideOffences = true %}
 {% block pageContent %}
         <h1 class="govuk-heading-l">Update offence outcomes</h1>
+                    {% if mergedFromText %}
+                        {{ govukInsetText({
+                            text: mergedFromText,
+                            classes: "govuk-!-margin-bottom-3",
+                            attributes: {
+                                "data-qa": "mergedFromText"
+                            }
+                        }) }}
+                    {% endif %}
     {% if courtAppearance.hasOverallSentenceLength === 'true' %}
         {{ govukSummaryList({
                 rows: [
@@ -65,6 +74,8 @@
             sentenceServeType: offence.sentence.sentenceServeType if offence.sentence,
             consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
             fineAmount: offence.sentence.fineAmount,
+            mergedFromCase: offence.mergedFromCase,
+            courtDetails: courtMap,
             actions: {
                 items: [
                     {
@@ -115,6 +126,8 @@
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
+                        courtDetails: courtMap,
                         actions: {
                             items: [
                                 {
@@ -156,6 +169,8 @@
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
                         consecutiveTo: sessionConsecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceReference] if offence.sentence and offence.sentence.consecutiveToSentenceReference else consecutiveToSentenceDetailsMap[offence.sentence.consecutiveToSentenceUuid],
                         fineAmount: offence.sentence.fineAmount,
+                        mergedFromCase: offence.mergedFromCase,
+                        courtDetails: courtMap,
                         actions: {
                             items: [
                                 {
