--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -112,16 +112,14 @@
             </ul>
         </div>
     </div>
-    {% if appearance.mergedFromTextArray and appearance.mergedFromTextArray | length > 0 %}
-      {% for text in appearance.mergedFromTextArray %}
-        {{ govukInsetText({
-          text: text,
-          classes: "govuk-!-margin-bottom-3",
-          attributes: {
-            "data-qa": "mergedFromText"
-          }
-        }) }}
-      {% endfor %}
+    {% if appearance.mergedFromCase and appearance.mergedFromCase | length > 0 %}
+      {{ govukInsetText({
+        text: appearance.mergedFromCase | join('<br>'),
+        classes: "govuk-!-margin-bottom-3",
+        attributes: {
+          "data-qa": "mergedFromText"
+        }
+      }) }}
     {% endif %}
     {% if not appearance.canDelete %}
       {{ govukInsetText({
