RASS-1268 fix issue to conesecutive to in offence card

--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -47,6 +47,7 @@
 
     {% for offence in unchangedOffences %}
         {% set offenceId = 'offences.' + offence.index %}
+        {#                // TODO#}
         {{
         offenceCard({
             offenceCode: offence.offenceCode,
@@ -97,6 +98,7 @@
 
     {% for offence in custodialChangedOffences %}
         {% set offenceId = 'offences.' + offence.index %}
+        {#                // TODO#}
         {{
                     offenceCard({
                         offenceCode: offence.offenceCode,
@@ -138,6 +140,7 @@
 
     {% for offence in nonCustodialChangedOffences %}
         {% set offenceId = 'offences.' + offence.index %}
+        {#                // TODO#}
         {{
                     offenceCard({
                         offenceCode: offence.offenceCode,
